OldStuff/tests/copies/newAndNeedChangeTests/fail/Break.java
package fail;

import java.lang.System;

public class Break {

  public static void main(String[] args ) {
    break = "this is not true";
  }

}
